# SLA.ck

./: .env.example  .gitignore  README.md  WORKSTREAM_SYNC.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/a2a_apps/: dashboard_agent.py  sql_agent.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: base.py  schema.py  session.py
backend/app/models/: domain.py
backend/app/schemas/: api.py
backend/app/services/: action_center.py  agent_artifacts.py  agentic_intake.py  agents.py  artifact_event_client.py  artifact_stream.py  auto_mode.py  case_read_model.py  cases.py  connector_crypto.py  connectors.py  copilot_event_client.py  copilot_stream.py  dashboard.py  dashboard_render.py  data_sources.py  detector_runtime.py  detectors.py  impact.py  live_ops.py  organizations.py  sla_rulebook.py  source_agents.py
backend/app/services/alerts/: detector.py
backend/app/services/etl/: normalizer.py
backend/app/services/ingestion/: __init__.py  bundle_importer.py  quick_commerce_bundle.py  relational_source.py
backend/app/services/query/: investigator.py
backend/app/services/reporting/: reporter.py
backend/app/services/seed/: __init__.py  generator.py  profile_loader.py
backend/app/services/seed.local/: generator.py  profile_loader.py
backend/app/services/sla/: __init__.py  contracts.py  extraction.py  parsers.py  providers.py  rulebook.py  runtime.py
backend/app/services/workflow/: approval.py
backend/app/utils/: audit.py  logging.py
backend/tests/: conftest.py  test_api.py  test_detector_runtime.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: blinkit_synthetic_data_guide.md
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+79 files in other folders)
